--- a/src/main.css
+++ b/src/main.css
@@ -2,4 +2,8 @@ html {
   background: url(./images/Natural-Full-HD-Background.jpg) no-repeat center center fixed;
   background-size: cover;
 }
+
+.mt-1rem {
+  margin-top: 1rem;
+}
 /*# sourceMappingURL=main.css.map */
