:art: Adds functional get current location
Updates get current location and renders data

--- a/src/main.scss
+++ b/src/main.scss
@@ -52,3 +52,13 @@ img {
   color: white;
   transform: rotateY(180deg);
 }
+
+h5 {
+  background-color: #617780;
+  text-align: center;
+  color: #cfcfcf;
+  font-weight: 700;
+}
+.card-title {
+  font-weight: 900 !important;
+}
