--- a/src/main.scss
+++ b/src/main.scss
@@ -62,3 +62,22 @@ h5 {
 .card-title {
   font-weight: 900 !important;
 }
+.card-content {
+  background-color: aquamarine;
+}
+.card {
+  text-align: center;
+}
+
+.collection-item {
+  background-color: teal !important;
+}
+
+@media only screen and (max-width: 600px) {
+  .brand-logo {
+    font-size: 25px !important;
+  }
+}
+li {
+  border: 2px;
+}
